-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
None
-
f4050cc5e (dev), 2c192c6f5 (dev), e703feea4 (dev), 1712c4eec (6.7), 3d01456b1 (6.7), 17e546ac7 (6.7), 0e95d3ab5 (dev), 1ed1122fc (dev), 4247c25b1 (6.7), 76a40b2e7 (6.7)
In the current patches, the keyboard input does not seem to be working for child windows. Can be easily verified by adding e.g. a QQuickView with a TextEdit to the manual test case embeddedwindows as one of the child windows - when you click on the TextEdit, the keyboard does not open, neither do we see a cursor.
- relates to
-
QTBUG-119574 Android: request to show SW keyboard not cleared up when view destroyed
-
- Reported
-
- mentioned in
-
Page Loading...