src/android/jar/src/org/qtproject/qt/android/QtActivityDelegate.java
@@ -138,6 +138,7 @@ class QtActivityDelegate extends QtActivityDelegateBase
                                              r.width(), kbHeight);
             return true;
         });
+        registerGlobalFocusChangeListener(m_layout);
         m_inputDelegate.setEditPopupMenu(new EditPopupMenu(m_activity, m_layout));
     }
 
